--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Mariana, desenvolvedora Front-end com especialidade em <strong>React, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/guilhermeonrails"> <img src="./assets/git.jpg">GitHub</a>
+                <a class="apresentacao__links__navegacao" href="https://github.com"> <img src="./assets/git.jpg">GitHub</a>
                 <a class="apresentacao__links__navegacao" href="https://linkedin.com"> <img src="./assets/linkedin.jpg">LinkedIn</a>
                 <a class="apresentacao__links__navegacao" href="https://twitch.tv"> <img src="./assets/twitch.jpg">Twitch</a>
                 
